# deep_grasp_planning

./: CMakeLists.txt  package.xml
include/deep_grasp_planning/: object_dataset_generator.h
src/: conv_net_complete_object.py  conv_net_complete_object_2d.py  generate_dataset.cpp  generate_models.cpp  net_cone_detection.py  net_cube_detection.py  net_cube_detection_test.py  net_cylinder_detection.py  net_object_classification.py  net_object_classification_3d.py  net_sphere_detection.py  object_dataset_generator.cpp  object_dataset_generator_node.cpp  object_dataset_generator_node_no_camera.cpp  object_dataset_generator_node_no_camera_big.cpp  object_dataset_generator_node_no_camera_big1.cpp  object_dataset_generator_node_no_camera_big10.cpp  object_dataset_generator_node_no_camera_big2.cpp  object_dataset_generator_node_no_camera_big3.cpp  object_dataset_generator_node_no_camera_big4.cpp  object_dataset_generator_node_no_camera_big5.cpp  object_dataset_generator_node_no_camera_big6.cpp  object_dataset_generator_node_no_camera_big7.cpp  object_dataset_generator_node_no_camera_big8.cpp  object_dataset_generator_node_no_camera_big9.cpp  object_dataset_generator_node_no_camera_cones.cpp  object_dataset_generator_node_no_camera_cubes.cpp  object_dataset_generator_node_no_camera_cylinders.cpp  object_dataset_generator_node_no_camera_hollows.cpp  object_dataset_generator_node_no_camera_spheres.cpp  read_dataset.py  read_dataset_2d.py  read_dataset_2d_cones.py  read_dataset_2d_cube.py  read_dataset_2d_cylinders.py  read_dataset_2d_object.py  read_dataset_3d_object.py  read_mat_from_file.cpp
